Expose gridcompanies as REST endpoint
